# Lighting-controller-software

./: CMakeLists.txt  README.md
src/: dmx.cpp  dmx.h  light_engine.cpp  light_engine.h  main.cpp
tests/: CMakeLists.txt  dmx_universe_test.cpp  light_engine_intensity_test.cpp  light_engine_tests.cpp  universe_tests.cpp
